--- a/css/MainStyle.css
+++ b/css/MainStyle.css
@@ -64,3 +64,14 @@ ph1{
     text-overflow: ellipsis;
     white-space: normal;
 }
+ph1{
+    font-size: 24pt;
+    font-weight:10pt;
+    color: rgb(240, 240, 240);
+    margin-left: 32pt;
+    width: 100%;
+    float: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+}
