--- a/css/MainStyle.css
+++ b/css/MainStyle.css
@@ -13,6 +13,7 @@ h1 {
     top: 0;
     left: 0;
     width: 100%;
+    z-index:999;
 }
 
 #Header a {
@@ -28,11 +29,29 @@ h1 {
 
 #SideBar {
     color: white;
+    position: absolute;
+    left:0pt;
+    top:20pt;
+    font-size: 16pt;
+    text-align: center;
+    background-color: #1f1f1f;
+    width:64pt;
+    height:100%;
+    float: left;
+}
+#SideBar *{
+    font-weight: bolder;
+    margin:10pt;
+    margin-top: 17pt;
+    margin-bottom: 17pt;
+    text-decoration: none;
 }
 
 #MainBar {
     font-size: 16pt;
     color: white;
+    position: absolute;
+    left: 72pt;
 }
 
 #Footer{
@@ -74,4 +93,9 @@ ph1{
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: normal;
+}
+.img{
+    position: absolute;
+    right:50pt;
+    top:100pt;
 }
