--- a/css/MainStyle.css
+++ b/css/MainStyle.css
@@ -7,7 +7,7 @@ h1 {
 }
 
 #Header {
-    height: 20pt;
+    height: auto;;
     background-color: rgb(0, 128, 128);
     position: fixed;
     top: 0;
@@ -17,14 +17,16 @@ h1 {
 }
 
 #Header a {
-    line-height: 10pt;
-    font-size: 15pt;
-    margin-left: 10pt;
-    margin-right: 10pt;
+    line-height: 32pt;
+    font-size: 18pt;
+    margin-left: 4%;
+    margin-right: 6%;
     color: rgb(128, 255, 255);
     text-decoration: none;
     position: relative;
-    top: 2pt;
+}
+#Header a:hover{
+    color: rgb(16, 240, 255);
 }
 
 #SideBar {
